--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,27 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-10 13:40:05 +0200
+%% Created for kietsy at 2015-08-10 14:13:55 +0200 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{threejs-format,
+	Date-Added = {2015-08-10 12:13:43 +0000},
+	Date-Modified = {2015-08-10 12:13:55 +0000},
+	Url = {https://github.com/mrdoob/three.js/wiki/JSON-Geometry-format-4}}
 
 @webpage{planesensor,
 	Date-Added = {2015-08-10 11:36:32 +0000},
 	Date-Modified = {2015-08-10 11:36:42 +0000},
-	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/PlaneSensor.html}}
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/PlaneSensor.html},
+	Bdsk-Url-1 = {http://doc.x3dom.org/author/PointingDeviceSensor/PlaneSensor.html}}
 
 @webpage{cylindersensor,
 	Date-Added = {2015-08-10 11:36:24 +0000},
 	Date-Modified = {2015-08-10 11:36:30 +0000},
-	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/CylinderSensor.html}}
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/CylinderSensor.html},
+	Bdsk-Url-1 = {http://doc.x3dom.org/author/PointingDeviceSensor/CylinderSensor.html}}
 
 @webpage{spheresensor,
 	Date-Added = {2015-08-10 11:35:13 +0000},
 	Date-Modified = {2015-08-10 11:35:30 +0000},
-	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/SphereSensor.html}}
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/SphereSensor.html},
+	Bdsk-Url-1 = {http://doc.x3dom.org/author/PointingDeviceSensor/SphereSensor.html}}
 
 @conference{LCR07,
 	Author = {Martin Lesage, Martin Lesage, Gilles Ra{\^\i}che},
@@ -105,19 +113,20 @@
 	Bdsk-Url-1 = {http://www.as.uni-heidelberg.de/studium/downloads.php}}
 
 @inproceedings{Marion:2012:RCS:2338714.2338721,
- author = {Marion, Charles and Jomier, Julien},
- title = {Real-time Collaborative Scientific WebGL Visualization with WebSocket},
- booktitle = {Proceedings of the 17th International Conference on 3D Web Technology},
- series = {Web3D '12},
- year = {2012},
- isbn = {978-1-4503-1432-9},
- location = {Los Angeles, California},
- pages = {47--50},
- numpages = {4},
- url = {http://doi.acm.org/10.1145/2338714.2338721},
- doi = {10.1145/2338714.2338721},
- acmid = {2338721},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {WebGL, WebSocket, collaborative, remote rendering, web 3D},
-}
+	Acmid = {2338721},
+	Address = {New York, NY, USA},
+	Author = {Marion, Charles and Jomier, Julien},
+	Booktitle = {Proceedings of the 17th International Conference on 3D Web Technology},
+	Doi = {10.1145/2338714.2338721},
+	Isbn = {978-1-4503-1432-9},
+	Keywords = {WebGL, WebSocket, collaborative, remote rendering, web 3D},
+	Location = {Los Angeles, California},
+	Numpages = {4},
+	Pages = {47--50},
+	Publisher = {ACM},
+	Series = {Web3D '12},
+	Title = {Real-time Collaborative Scientific WebGL Visualization with WebSocket},
+	Url = {http://doi.acm.org/10.1145/2338714.2338721},
+	Year = {2012},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2338714.2338721},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2338714.2338721}}
